[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/tutorial/TutorialLevel1.gd" type="Script" id=1]
[ext_resource path="res://fonts/PaperJohnnyEins-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://img/other/backdrop.png" type="Texture" id=3]
[ext_resource path="res://music/Ludum Dare 30 - Track 1.wav" type="AudioStream" id=4]
[ext_resource path="res://tiles/WorldTiles.tres" type="TileSet" id=5]
[ext_resource path="res://worlditems/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/BigFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://pickups/DoubleJumpPickup.tscn" type="PackedScene" id=8]
[ext_resource path="res://pickups/JetpackPickup.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15000, 10 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="TutorialLevel1" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 11.6735 ]
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.388
autoplay = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 30000, 30000 )

[node name="Death Boundary" type="Area2D" parent="Background"]
position = Vector2( 0, 510 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Death Boundary"]
position = Vector2( 0, 325 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( -1310662, 3, 0, -1310661, 3, 1, -1310660, 3, 1, -1310659, 3, 1, -1310658, 3, 1, -1310657, 3, 1, -1310656, 3, 1, -1310655, 3, 1, -1310654, 3, 1, -1310653, 3, 1, -1310652, 3, 1, -1310651, 3, 1, -1310650, 3, 1, -1310649, 3, 1, -1310648, 3, 1, -1310647, 3, 1, -1310646, 3, 1, -1310645, 3, 1, -1310644, 3, 1, -1310643, 3, 1, -1310642, 3, 1, -1310641, 3, 1, -1310640, 3, 1, -1310639, 3, 1, -1310638, 3, 1, -1310637, 3, 1, -1310636, 3, 2, -1245126, 3, 65536, -1245125, 3, 65537, -1245124, 3, 65537, -1245123, 3, 65537, -1245122, 3, 65537, -1245121, 3, 65537, -1245120, 3, 65537, -1245119, 3, 65537, -1245118, 3, 65537, -1245117, 3, 65537, -1245116, 3, 65537, -1245115, 3, 65537, -1245114, 3, 65537, -1245113, 3, 65537, -1245112, 3, 65537, -1245111, 3, 65537, -1245110, 3, 65537, -1245109, 3, 65537, -1245108, 3, 65537, -1245107, 3, 65537, -1245106, 3, 65537, -1245105, 3, 65537, -1245104, 3, 65537, -1245103, 3, 65537, -1245102, 3, 65540, -1245101, 3, 131073, -1245100, 3, 131074, -1179590, 3, 65536, -1179589, 3, 65537, -1179588, 3, 65537, -1179587, 3, 65537, -1179586, 3, 65537, -1179585, 3, 65537, -1179584, 3, 65537, -1179583, 3, 65537, -1179582, 3, 65537, -1179581, 3, 65537, -1179580, 3, 65537, -1179579, 3, 65537, -1179578, 3, 65537, -1179577, 3, 65537, -1179576, 3, 65537, -1179575, 3, 65537, -1179574, 3, 65537, -1179573, 3, 65537, -1179572, 3, 65537, -1179571, 3, 65537, -1179570, 3, 65537, -1179569, 3, 65537, -1179568, 3, 65537, -1179567, 3, 65537, -1179566, 3, 65538, -1114054, 3, 65536, -1114053, 3, 65537, -1114052, 3, 65537, -1114051, 3, 65537, -1114050, 3, 65537, -1114049, 3, 65537, -1114048, 3, 65537, -1114047, 3, 65537, -1114046, 3, 65537, -1114045, 3, 65537, -1114044, 3, 65537, -1114043, 3, 65537, -1114042, 3, 65537, -1114041, 3, 65537, -1114040, 3, 65537, -1114039, 3, 65537, -1114038, 3, 65537, -1114037, 3, 65537, -1114036, 3, 65537, -1114035, 3, 65537, -1114034, 3, 65537, -1114033, 3, 65537, -1114032, 3, 65540, -1114031, 3, 131073, -1114030, 3, 131074, -1048518, 3, 65536, -1048517, 3, 65537, -1048516, 3, 65537, -1048515, 3, 65537, -1048514, 3, 65537, -1048513, 3, 65537, -1048512, 3, 65537, -1048511, 3, 65537, -1048510, 3, 65537, -1048509, 3, 65537, -1048508, 3, 65537, -1048507, 3, 65537, -1048506, 3, 65537, -1048505, 3, 65537, -1048504, 3, 65537, -1048503, 3, 65537, -1048502, 3, 65537, -1048501, 3, 65537, -1048500, 3, 65537, -1048499, 3, 65537, -1048498, 3, 65537, -1048497, 3, 65537, -1048496, 3, 65538, -982982, 3, 65536, -982981, 3, 65537, -982980, 3, 65537, -982979, 3, 65537, -982978, 3, 65537, -982977, 3, 65537, -982976, 3, 65537, -982975, 3, 65537, -982974, 3, 65537, -982973, 3, 65537, -982972, 3, 65537, -982971, 3, 65537, -982970, 3, 65537, -982969, 3, 65537, -982968, 3, 65537, -982967, 3, 65537, -982966, 3, 65537, -982965, 3, 65537, -982964, 3, 65537, -982963, 3, 65537, -982962, 3, 65540, -982961, 3, 131073, -982960, 3, 131074, -917446, 3, 65536, -917445, 3, 65537, -917444, 3, 65537, -917443, 3, 65537, -917442, 3, 65537, -917441, 3, 65537, -917440, 3, 65537, -917439, 3, 65537, -917438, 3, 65537, -917437, 3, 65537, -917436, 3, 65537, -917435, 3, 65537, -917434, 3, 65537, -917433, 3, 65537, -917432, 3, 65537, -917431, 3, 65537, -917430, 3, 65537, -917429, 3, 65537, -917428, 3, 65537, -917427, 3, 65537, -917426, 3, 65538, -851910, 3, 65536, -851909, 3, 65537, -851908, 3, 65537, -851907, 3, 65537, -851906, 3, 65537, -851905, 3, 65537, -851904, 3, 65537, -851903, 3, 65537, -851902, 3, 65537, -851901, 3, 65537, -851900, 3, 65537, -851899, 3, 65537, -851898, 3, 65537, -851897, 3, 65537, -851896, 3, 65537, -851895, 3, 65537, -851894, 3, 65537, -851893, 3, 65537, -851892, 3, 65540, -851891, 3, 131073, -851890, 3, 131074, -786374, 3, 65536, -786373, 3, 65537, -786372, 3, 65537, -786371, 3, 65537, -786370, 3, 65537, -786369, 3, 65537, -786368, 3, 65537, -786367, 3, 65537, -786366, 3, 65537, -786365, 3, 65537, -786364, 3, 65537, -786363, 3, 65537, -786362, 3, 65537, -786361, 3, 65537, -786360, 3, 65537, -786359, 3, 65537, -786358, 3, 65537, -786357, 3, 65537, -786356, 3, 65538, -720838, 3, 65536, -720837, 3, 65537, -720836, 3, 65537, -720835, 3, 65537, -720834, 3, 65537, -720833, 3, 65537, -720832, 3, 65537, -720831, 3, 65537, -720830, 3, 65537, -720829, 3, 65537, -720828, 3, 65537, -720827, 3, 65537, -720826, 3, 65537, -720825, 3, 65537, -720824, 3, 65537, -720823, 3, 65537, -720822, 3, 65540, -720821, 3, 131073, -720820, 3, 131074, -655302, 3, 65536, -655301, 3, 65537, -655300, 3, 65537, -655299, 3, 65537, -655298, 3, 65537, -655297, 3, 65537, -655296, 3, 65537, -655295, 3, 65537, -655294, 3, 65537, -655293, 3, 65537, -655292, 3, 65537, -655291, 3, 65537, -655290, 3, 65537, -655289, 3, 65537, -655288, 3, 65537, -655287, 3, 65537, -655286, 3, 65538, -589766, 3, 131072, -589765, 3, 131073, -589764, 3, 131073, -589763, 3, 131073, -589762, 3, 131073, -589761, 3, 131073, -589760, 3, 131073, -589759, 3, 131073, -589758, 3, 131073, -589757, 3, 131073, -589756, 3, 131073, -589755, 3, 131073, -589754, 3, 131073, -589753, 3, 131073, -589752, 3, 131073, -589751, 3, 131073, -589750, 3, 131074, -327645, 3, 0, -327644, 3, 1, -327643, 3, 1, -327642, 3, 1, -327641, 3, 1, -327640, 3, 1, -327639, 3, 1, -327638, 3, 1, -327637, 3, 1, -327636, 3, 1, -327635, 3, 1, -327634, 3, 1, -327633, 3, 1, -327632, 3, 1, -327631, 3, 1, -327630, 3, 1, -327629, 3, 1, -327628, 3, 1, -327627, 3, 2, -262109, 3, 65536, -262108, 3, 65537, -262107, 3, 65537, -262106, 3, 65537, -262105, 3, 65537, -262104, 3, 65537, -262103, 3, 65537, -262102, 3, 65537, -262101, 3, 65537, -262100, 3, 65537, -262099, 3, 65537, -262098, 3, 65537, -262097, 3, 65537, -262096, 3, 65537, -262095, 3, 65537, -262094, 3, 65537, -262093, 3, 65537, -262092, 3, 65537, -262091, 3, 65538, -196573, 3, 65536, -196572, 3, 65537, -196571, 3, 65537, -196570, 3, 65537, -196569, 3, 65537, -196568, 3, 65537, -196567, 3, 65537, -196566, 3, 65537, -196565, 3, 65537, -196564, 3, 65537, -196563, 3, 65537, -196562, 3, 65537, -196561, 3, 65537, -196560, 3, 65537, -196559, 3, 65537, -196558, 3, 65537, -196557, 3, 65537, -196556, 3, 65537, -196555, 3, 65538, -131037, 3, 65536, -131036, 3, 65537, -131035, 3, 65537, -131034, 3, 65537, -131033, 3, 65537, -131032, 3, 65537, -131031, 3, 65537, -131030, 3, 65537, -131029, 3, 65537, -131028, 3, 65537, -131027, 3, 65537, -131026, 3, 65537, -131025, 3, 65537, -131024, 3, 65537, -131023, 3, 65537, -131022, 3, 65537, -131021, 3, 65537, -131020, 3, 65537, -131019, 3, 65538, -65501, 3, 65536, -65500, 3, 65537, -65499, 3, 65537, -65498, 3, 65537, -65497, 3, 65537, -65496, 3, 65537, -65495, 3, 65537, -65494, 3, 65537, -65493, 3, 65537, -65492, 3, 65537, -65491, 3, 65537, -65490, 3, 65537, -65489, 3, 65537, -65488, 3, 65537, -65487, 3, 65537, -65486, 3, 65537, -65485, 3, 65537, -65484, 3, 65537, -65483, 3, 65538, 35, 3, 65536, 36, 3, 65537, 37, 3, 65537, 38, 3, 65537, 39, 3, 65537, 40, 3, 65537, 41, 3, 65537, 42, 3, 65537, 43, 3, 65537, 44, 3, 65537, 45, 3, 65537, 46, 3, 65537, 47, 3, 65537, 48, 3, 65537, 49, 3, 65537, 50, 3, 65537, 51, 3, 65537, 52, 3, 65537, 53, 3, 65538, 131061, 3, 0, 131062, 3, 1, 131063, 3, 1, 131064, 3, 1, 131065, 3, 1, 131066, 3, 1, 131067, 3, 1, 131068, 3, 1, 131069, 3, 1, 131070, 3, 1, 131071, 3, 1, 65536, 3, 1, 65537, 3, 1, 65538, 3, 1, 65539, 3, 1, 65540, 3, 1, 65541, 3, 1, 65542, 3, 1, 65543, 3, 1, 65544, 3, 1, 65545, 3, 1, 65546, 3, 2, 65554, 3, 0, 65555, 3, 1, 65556, 3, 1, 65557, 3, 1, 65558, 3, 1, 65559, 3, 1, 65560, 3, 1, 65561, 3, 1, 65562, 3, 1, 65563, 3, 2, 65571, 3, 131072, 65572, 3, 131073, 65573, 3, 131073, 65574, 3, 131073, 65575, 3, 131073, 65576, 3, 131073, 65577, 3, 131073, 65578, 3, 131073, 65579, 3, 131073, 65580, 3, 131073, 65581, 3, 131073, 65582, 3, 131073, 65583, 3, 131073, 65584, 3, 131073, 65585, 3, 131073, 65586, 3, 131073, 65587, 3, 131073, 65588, 3, 131073, 65589, 3, 131074, 196597, 3, 65536, 196598, 3, 65537, 196599, 3, 65537, 196600, 3, 65537, 196601, 3, 65537, 196602, 3, 65537, 196603, 3, 65537, 196604, 3, 65537, 196605, 3, 65537, 196606, 3, 65537, 196607, 3, 65537, 131072, 3, 65537, 131073, 3, 65537, 131074, 3, 65537, 131075, 3, 65537, 131076, 3, 65537, 131077, 3, 65537, 131078, 3, 65537, 131079, 3, 65537, 131080, 3, 65537, 131081, 3, 65537, 131082, 3, 65538, 131090, 3, 65536, 131091, 3, 65537, 131092, 3, 65537, 131093, 3, 65537, 131094, 3, 65537, 131095, 3, 65537, 131096, 3, 65537, 131097, 3, 65537, 131098, 3, 65537, 131099, 3, 65538, 262133, 3, 65536, 262134, 3, 65537, 262135, 3, 65537, 262136, 3, 65537, 262137, 3, 65537, 262138, 3, 65537, 262139, 3, 65537, 262140, 3, 65537, 262141, 3, 65537, 262142, 3, 65537, 262143, 3, 65537, 196608, 3, 65537, 196609, 3, 65537, 196610, 3, 65537, 196611, 3, 65537, 196612, 3, 65537, 196613, 3, 65537, 196614, 3, 65537, 196615, 3, 65537, 196616, 3, 65537, 196617, 3, 65537, 196618, 3, 65538, 196626, 3, 65536, 196627, 3, 65537, 196628, 3, 65537, 196629, 3, 65537, 196630, 3, 65537, 196631, 3, 65537, 196632, 3, 65537, 196633, 3, 65537, 196634, 3, 65537, 196635, 3, 65538, 327669, 3, 65536, 327670, 3, 65537, 327671, 3, 65537, 327672, 3, 65537, 327673, 3, 65537, 327674, 3, 65537, 327675, 3, 65537, 327676, 3, 65537, 327677, 3, 65537, 327678, 3, 65537, 327679, 3, 65537, 262144, 3, 65537, 262145, 3, 65537, 262146, 3, 65537, 262147, 3, 65537, 262148, 3, 65537, 262149, 3, 65537, 262150, 3, 65537, 262151, 3, 65537, 262152, 3, 65537, 262153, 3, 65537, 262154, 3, 65538, 262162, 3, 65536, 262163, 3, 65537, 262164, 3, 65537, 262165, 3, 65537, 262166, 3, 65537, 262167, 3, 65537, 262168, 3, 65537, 262169, 3, 65537, 262170, 3, 65537, 262171, 3, 65538, 393205, 3, 65536, 393206, 3, 65537, 393207, 3, 65537, 393208, 3, 65537, 393209, 3, 65537, 393210, 3, 65537, 393211, 3, 65537, 393212, 3, 65537, 393213, 3, 65537, 393214, 3, 65537, 393215, 3, 65537, 327680, 3, 65537, 327681, 3, 65537, 327682, 3, 65537, 327683, 3, 65537, 327684, 3, 65537, 327685, 3, 65537, 327686, 3, 65537, 327687, 3, 65537, 327688, 3, 65537, 327689, 3, 65537, 327690, 3, 65538, 327698, 3, 65536, 327699, 3, 65537, 327700, 3, 65537, 327701, 3, 65537, 327702, 3, 65537, 327703, 3, 65537, 327704, 3, 65537, 327705, 3, 65537, 327706, 3, 65537, 327707, 3, 65538, 458741, 3, 65536, 458742, 3, 65537, 458743, 3, 65537, 458744, 3, 65537, 458745, 3, 65537, 458746, 3, 65537, 458747, 3, 65537, 458748, 3, 65537, 458749, 3, 65537, 458750, 3, 65537, 458751, 3, 65537, 393216, 3, 65537, 393217, 3, 65537, 393218, 3, 65537, 393219, 3, 65537, 393220, 3, 65537, 393221, 3, 65537, 393222, 3, 65537, 393223, 3, 65537, 393224, 3, 65537, 393225, 3, 65537, 393226, 3, 65538, 393234, 3, 65536, 393235, 3, 65537, 393236, 3, 65537, 393237, 3, 65537, 393238, 3, 65537, 393239, 3, 65537, 393240, 3, 65537, 393241, 3, 65537, 393242, 3, 65537, 393243, 3, 65538, 524277, 3, 65536, 524278, 3, 65537, 524279, 3, 65537, 524280, 3, 65537, 524281, 3, 65537, 524282, 3, 65537, 524283, 3, 65537, 524284, 3, 65537, 524285, 3, 65537, 524286, 3, 65537, 524287, 3, 65537, 458752, 3, 65537, 458753, 3, 65537, 458754, 3, 65537, 458755, 3, 65537, 458756, 3, 65537, 458757, 3, 65537, 458758, 3, 65537, 458759, 3, 65537, 458760, 3, 65537, 458761, 3, 65537, 458762, 3, 65538, 458770, 3, 65536, 458771, 3, 65537, 458772, 3, 65537, 458773, 3, 65537, 458774, 3, 65537, 458775, 3, 65537, 458776, 3, 65537, 458777, 3, 65537, 458778, 3, 65537, 458779, 3, 65538, 589813, 3, 131072, 589814, 3, 131073, 589815, 3, 131073, 589816, 3, 131073, 589817, 3, 131073, 589818, 3, 131073, 589819, 3, 131073, 589820, 3, 131073, 589821, 3, 131073, 589822, 3, 131073, 589823, 3, 131073, 524288, 3, 131073, 524289, 3, 131073, 524290, 3, 131073, 524291, 3, 131073, 524292, 3, 131073, 524293, 3, 131073, 524294, 3, 131073, 524295, 3, 131073, 524296, 3, 131073, 524297, 3, 131073, 524298, 3, 131074, 524306, 3, 131072, 524307, 3, 131073, 524308, 3, 131073, 524309, 3, 131073, 524310, 3, 131073, 524311, 3, 131073, 524312, 3, 131073, 524313, 3, 131073, 524314, 3, 131073, 524315, 3, 131074 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 6 )]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="DebugInfo" type="Control" parent="UILayer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPositionLabel" type="Label" parent="UILayer/DebugInfo"]
margin_right = 40.0
margin_bottom = 14.0
text = "X: N/A, Y: N/A"

[node name="PlayerJumpCountLabel" type="Label" parent="UILayer/DebugInfo"]
margin_top = 14.0
margin_right = 158.0
margin_bottom = 28.0
text = "Jump Max: N/A, Left: N/A"

[node name="PlayerVelocityLabel" type="Label" parent="UILayer/DebugInfo"]
margin_top = 28.0
margin_right = 123.0
margin_bottom = 42.0
text = "VX: N/A, VY: N/A"

[node name="FPSLabel" type="Label" parent="UILayer/DebugInfo"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 56.0
text = "FPS: N/A, Delta: N/A"

[node name="JetpackTimeLabel" type="Label" parent="UILayer/DebugInfo"]
margin_top = 56.0
margin_right = 136.0
margin_bottom = 70.0
text = "Jetpack time left: N/A"

[node name="PickupLabel" type="Label" parent="UILayer"]
margin_top = 570.0
margin_right = 228.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 2 )
text = "Current Pickup: N/A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialStuff" type="Node2D" parent="."]

[node name="ControlsLabel" type="Label" parent="TutorialStuff"]
margin_left = -233.0
margin_top = -400.0
margin_right = 233.0
margin_bottom = -183.0
custom_fonts/font = ExtResource( 7 )
text = "A + D - Move
Space - Jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishLabel" type="Label" parent="TutorialStuff"]
margin_left = 4318.29
margin_top = -1741.77
margin_right = 4784.29
margin_bottom = -1414.77
custom_fonts/font = ExtResource( 7 )
text = "Level Finish
|
\\/"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoubleJumpPickupLabel" type="Label" parent="TutorialStuff"]
margin_left = 1241.54
margin_top = -360.0
margin_right = 1707.54
margin_bottom = -33.0
custom_fonts/font = ExtResource( 7 )
text = "Double Jump
|
\\/"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoubleJumpPickup" parent="TutorialStuff/DoubleJumpPickupLabel" instance=ExtResource( 8 )]
position = Vector2( 227.823, 391.89 )

[node name="JetpackPickup" type="Label" parent="TutorialStuff"]
margin_left = 2636.03
margin_top = -739.547
margin_right = 3102.03
margin_bottom = -412.547
custom_fonts/font = ExtResource( 7 )
text = "Jetpack
|
\\/"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JetpackPickup" parent="TutorialStuff/JetpackPickup" instance=ExtResource( 9 )]
position = Vector2( 231.546, 387.549 )
[connection signal="body_entered" from="Background/Death Boundary" to="." method="_on_Area2D_body_entered"]
